[gd_scene load_steps=6 format=3 uid="uid://ve6utwb4tl1k"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_8gpss"]
[ext_resource type="FontFile" uid="uid://q7n5qeeoavmp" path="res://assets/Kenney Bold.ttf" id="2_jd4oh"]

[sub_resource type="LabelSettings" id="LabelSettings_ie8qo"]
font = ExtResource("2_jd4oh")
font_size = 48
font_color = Color(0.839216, 0.545098, 0.239216, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f64mx"]
font = ExtResource("2_jd4oh")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vn0un"]
font = ExtResource("2_jd4oh")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_8gpss")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Coin Dash!"
label_settings = SubResource("LabelSettings_ie8qo")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Timer" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
label_settings = SubResource("LabelSettings_f64mx")
vertical_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
label_settings = SubResource("LabelSettings_vn0un")
horizontal_alignment = 2
vertical_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -93.0
offset_right = 78.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jd4oh")
theme_override_font_sizes/font_size = 14
text = "Start Game"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
